# storage/api-docs/api-docs.json
@@ -2,76 +2,9 @@
     "openapi": "3.0.0",
     "info": {
         "title": "Lab API",
-        "version": "0.1"
+        "version": "0.2"
     },
     "paths": {
-        "/api/login": {
-            "post": {
-                "tags": [
-                    "Auth"
-                ],
-                "summary": "Login",
-                "operationId": "login",
-                "parameters": [
-                    {
-                        "name": "email",
-                        "in": "query",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "password",
-                        "in": "query",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "content": {
-                            "application/json": {}
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    }
-                }
-            }
-        },
-        "/api/logout": {
-            "post": {
-                "tags": [
-                    "Auth"
-                ],
-                "summary": "Logout",
-                "operationId": "Logout",
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "content": {
-                            "application/json": {}
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    }
-                }
-            }
-        },
         "/api/labs/get_all_records": {
             "get": {
                 "tags": [
@@ -104,15 +37,15 @@
                     "Labs"
                 ],
                 "summary": "Create or Update a lab record",
-                "operationId": "updstore",
+                "operationId": "upstore",
                 "parameters": [
                     {
                         "name": "data",
-                        "in": "path",
+                        "in": "query",
                         "description": "contains JSON format key value {mykey : value1}",
                         "required": true,
                         "schema": {
-                            "type": "Json"
+                            "type": "object"
                         }
                     }
                 ],
@@ -149,7 +82,7 @@
                         "description": "code",
                         "required": true,
                         "schema": {
-                            "type": "String"
+                            "type": "string"
                         }
                     },
                     {
@@ -158,7 +91,7 @@
                         "description": "unix timestamp",
                         "required": false,
                         "schema": {
-                            "type": "String, Int"
+                            "type": "int"
                         }
                     }
                 ],
